<resources>
    <string name="app_name">Socioverse</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_a_story">Upload a Story</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="tifor">Tifor</string>
    <string name="text_view">TextView</string>
    <string name="todo_te">TODO</string>
    <string name="_14">14</string>
    <string name="tf_app_done">TF App Done</string>
    <string name="todo1">TODO</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="photos">Photos</string>
    <string name="_46855">46855</string>
    <string name="_500">500</string>
    <string name="_140">140</string>
    <string name="loram">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="my_friends">My Friends</string>
    <string name="login">Log In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="profession">Profession</string>
    <string name="follow">FOLLOW</string>
    <string name="create_post">Create Post</string>
    <string name="post">Post</string>
    <string name="what_s_your_mind">What\'s your mind?</string>
    <string name="textview1">TextView</string>
    <string name="todo2">TODO</string>
    <string name="add_to_your_post">Add To Your Post</string>
    <string name="todo8">TODO</string>
    <string name="your_comment">Your Comment</string>
    <string name="todo20">TODO</string>
    <string name="tf_tifor">TF Tifor</string>
    <string name="after_this_all_add">After this All Add</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="my_flowers">My Flowers</string>
    <string name="more">More</string>
    <string name="new_name">New Name</string>
    <string name="your_password">Your Password</string>
    <string name="update">Update</string>
    <string name="follow1">Follow</string>
    <string name="ad_attribution">AD</string>
    <string name="add_image">Add Image</string>
    <string name="type_a_tifor_message">Type A Tifor Message</string>
    <string name="tf_user_online">TF User Online</string>
    <string name="upload">Upload</string>
    <string name="add_your_video">Add Your Video</string>
    <string name="add_your_photo">Add Your Photo</string>
    <string name="add_background">Add Background</string>
    <string name="more1">More....</string>
    <string name="developed_by_tifor">Developed by Tifor</string>
    <string name="username">Username</string>
    <string name="write_message_here">Write message here</string>
    <string name="update_profile">Update profile</string>
    <string name="logout">Logout</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="number">Number</string>
    <string name="show_password">Show Password</string>
    <string name="default_notification_channel_id">socioverse</string>
    <string name="chats">Chats</string>
    <string name="search_user">Search User</string>
    <string name="emailText">hi@gmail.com</string>
    <string name="send">Send</string>
    <string name="invite_code">Invite Code</string>
    <string name="one_time_code_save">One Time Code Save</string>
</resources>