<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    tools:context=".LoginUsernameActivity">

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintBottom_toTopOf="@id/buttonSignUp1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPassword1"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        app:layout_constraintEnd_toStartOf="@id/checkBox1"
        app:layout_constraintTop_toTopOf="@id/checkBox1"
        app:layout_constraintBottom_toBottomOf="@id/checkBox1"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_200sdp"
        android:background="@drawable/follow_active_btn"
        android:hint="@string/username"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,MissingConstraints,UnusedAttribute,TextSizeCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/inputPassword1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/follow_active_btn"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/checkBox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputEmail1"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextSizeCheck,VisualLintTextFieldSize,VisualLintBounds" />


    <EditText
        android:id="@+id/inputEmail1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/follow_active_btn"
        android:hint="@string/e_mail"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/inputPassword1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_username"
        tools:ignore="Autofill,MissingConstraints,TouchTargetSizeCheck,TextSizeCheck,VisualLintTextFieldSize,VisualLintBounds" />


    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/buttonSignUp1"
        app:layout_constraintEnd_toEndOf="@id/buttonSignUp1"
        app:layout_constraintStart_toStartOf="@id/buttonSignUp1"
        app:layout_constraintTop_toTopOf="@id/buttonSignUp1"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_150sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox1"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintBounds,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
