<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_24sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ScrollViewSize">


            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toTopOf="@id/inputNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputPassword"
                tools:ignore="MissingConstraints,VisualLintBounds" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/follow_active_btn"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toTopOf="@id/checkBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputEmail"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck,TextSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:background="@drawable/follow_active_btn"
                android:hint="@string/e_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toTopOf="@id/inputPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputName"
                tools:ignore="Autofill,MissingConstraints,TouchTargetSizeCheck,TextSizeCheck,VisualLintTextFieldSize" />


            <EditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/follow_active_btn"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toTopOf="@id/inputEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck,UnusedAttribute,TextSizeCheck,VisualLintTextFieldSize" />


            <EditText
                android:id="@+id/inputNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/follow_active_btn"
                android:hint="@string/number"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="15"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox"
                tools:ignore="Autofill,MissingConstraints,TouchTargetSizeCheck,TextSizeCheck,VisualLintTextFieldSize,VisualLintBounds" />


            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toTopOf="@id/inputName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text1"
                tools:ignore="ContentDescription,KeyboardInaccessibleWidget,MissingConstraints,SpeakableTextPresentCheck" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/buttonSignUp"
                app:layout_constraintEnd_toEndOf="@id/buttonSignUp"
                app:layout_constraintStart_toStartOf="@id/buttonSignUp"
                app:layout_constraintTop_toTopOf="@id/buttonSignUp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/welcome"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,TextSizeCheck" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                app:layout_constraintBottom_toBottomOf="@id/checkBox"
                app:layout_constraintEnd_toStartOf="@id/checkBox"
                app:layout_constraintTop_toTopOf="@id/checkBox"
                tools:ignore="MissingConstraints,VisualLintBounds" />


            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sign_in"
                android:textColor="#009688"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/textprivacy_Policy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonSignUp"
                tools:ignore="MissingConstraints,TextSizeCheck,VisualLintOverlap,VisualLintBounds" />


            <TextView
                android:id="@+id/textprivacy_Policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:autoLink="web"
                android:text="@string/privacy_policy"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSignIn"
                tools:ignore="MissingConstraints,VisualLintBounds,VisualLintOverlap" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_150sdp"
                app:layout_constraintBottom_toTopOf="@id/textSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputNumber"
                tools:ignore="MissingConstraints,TextSizeCheck,VisualLintBounds,VisualLintButtonSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>